# selects

./: .gitignore  LICENSE  README.md  nuitka-crash-report.xml  pyproject.toml
.github/workflows/: ci.yml  nuitka.yml  release.yml
design/: app.js  clusters.html  index.html  stories.html  styles.css
docs/: index.html
examples/ladakh/: README.md  keywords.json  landmarks.json  tag_prompts.json
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
packaging/: build.py  build_nuitka.py  entry.py  fetch_darktable.py  selects.spec  travelcull.spec
scripts/: analyze_quality.py  bench_vlms.py  check_clusters_api.py  check_db_tables.py  check_tags.py  compare_scores.py  compute_ap25.py  compute_categories.py  compute_nima.py  inspect_ladakh.py  iqa_calibration.py  personal_performance.py
selects/: __init__.py  __main__.py  cli.py  config.py  dedup.py  desktop.py  export.py  gpu.py  launcher.py  logging_setup.py  pipeline.py  recap.py  video.py  watcher.py
selects/classical/: aesthetic_grade.py  blur.py  exposure.py  faces.py  straighten.py
selects/db/: __init__.py  models.py
selects/decode/: __init__.py  heic.py  jpeg.py  video.py
selects/indexer/: exif.py  orchestrator.py  preview.py  walker.py
selects/ml/: caption.py  curation.py  deblur_nafnet.py  deblur_restormer.py  embed.py  face_attributes.py  faces.py  locations.py  lowlight.py  model_assets.py  moments.py  nl_story.py  onnx_rt.py  persons.py  ram_tags.py  retouch_csrnet.py  search.py  siglip_tokenizer.py  smart_clusters.py  stories.py  tags.py  taste.py  thematic_clusters.py  trip_data.py  trip_type.py
selects/server/: app.py  dedup_routes.py  export_routes.py  faces2_routes.py  fs_routes.py  (+12 more)
tests/: conftest.py  test_auto_reject.py  test_classical_blur.py  test_classical_exposure.py  test_classical_faces.py  test_cli.py  test_config.py  test_db.py  test_decode_heic.py  test_decode_jpeg.py  test_decode_raw.py  test_decode_video.py  test_dedup.py  test_exif.py  test_export.py  test_face_attributes.py  test_gpu.py  test_indexer_orchestrator.py  test_migrations.py  test_ml_embed.py  test_ml_moments.py  test_ml_stories.py  test_ml_tags.py  test_model_assets.py  test_pipeline_stage1.py  test_preview.py  test_recap.py  test_search2_routes.py  test_server_libraries.py  test_server_routes.py  test_server_ws.py  test_taste.py  test_trip_data.py  test_video.py  test_walker.py  test_watcher.py
travelcull/: __init__.py  __main__.py  cli.py  config.py  dedup.py  export.py  gpu.py  pipeline.py  recap.py  video.py  watcher.py
(+133 files in other folders)
