[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "travelcull"
version = "0.1.0"
description = "Local AI-assisted travel photo and video culling"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "click>=8.1",
  "pillow>=10.2",
  "pillow-heif>=0.16",
  "rawpy>=0.21",
  "opencv-python>=4.9",
  "numpy>=1.26",
  "pyexiv2>=2.11",
  "websockets>=12.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.26",
  "ruff>=0.3",
]

[project.scripts]
travelcull = "travelcull.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["travelcull"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"
