[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "selects"
version = "0.1.0"
description = "Local AI-assisted travel photo and video culling"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "click>=8.1",
  "pillow>=10.2",
  "pillow-heif>=0.16",
  "rawpy>=0.21",
  "opencv-python>=4.9",
  "numpy>=1.26",
  "pyexiv2>=2.11",
  "websockets>=12.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
ml = [
  "torch>=2.2",
  "transformers>=4.40",
  "insightface>=0.7",
  "onnxruntime>=1.17",
  "scikit-learn>=1.4",
  "hdbscan>=0.8.33",
  "umap-learn>=0.5.5",
  "requests>=2.31",
  # NOTE: RAM++ tagging (recognize-anything) has no PyPI release. Install it
  # separately for tag features:
  #   pip install git+https://github.com/xinyu1205/recognize-anything.git
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.26",
  "ruff>=0.3",
]

[project.scripts]
selects = "selects.cli:main"

[tool.hatch.build]
# The built frontend lands in selects/server/static (gitignored). Force it into
# the sdist/wheel so `pip install selects` ships a working GUI, not just the API.
artifacts = ["selects/server/static/**/*"]

[tool.hatch.build.targets.wheel]
packages = ["selects"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"
